main argument until transit

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -112,7 +112,7 @@ Fluttuazioni: $\sigma_{ij}=-\rho\exv{u_iu_j}$.
 Viscosit\'a molecolare: $\exv{u_iu_j}=-\nu\TDy{x_j}{v_i}$.
 Turbulence: Reynpold stress $\tau_{ij}=-\rho\exv{v_jv_i}$, $\exv{u_iu_j}=-\nu_T\TDy{x_j}{v_i}$
 \begin{equation}
-\PDy{t}{\Sigma}=3\frac{1}{r}\PDof{r}[r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]\label{eq:sigmaevol}
+\PDy{t}{\Sigma}=3\frac{1}{r}\PDof{r}[r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]
 \end{equation}
 \end{workout}
 
@@ -495,7 +495,7 @@ Lin papaloizou 79: at conjuction with planets a fluid element trajectory is defl
 \end{equation}
 $v_0$ velocit\'a relativa fluido-pianeta; dopo l'interazione l'elemento di fluido \'e in orbita ellittica attorno alla stella
 \begin{figure}[!t]
-\includegraphics[width=0.9\textwidth]{gravimpulse}
+\includegraphics[width=0.9\textwidth]{impulseapprox}
 \end{figure}
 Qual \'e il trasferimento di momento angolare disco-pianeta associato a quest'interazione?
 Trasferimento di momento per unit\'a di massa:
@@ -519,7 +519,7 @@ Formazione gap: perch\'e il gap si stazionario il momento scambiato nell'interaz
 \TDy{t}{J}|_{visc}=3\pi\nu\Sigma a^2\omega
 \end{equation}
 deve essere quindi $\TDy{t}{J}|_{visc}<\TDy{t}{J}$
-Cut-off: $b_{min}\aaprox H$, la pressione smorza effetti su scala pi\'u piccola; regime non-lneare, richiesto per gap formation, lunghezza-scala del flusso non minore di $r_H$: predndendo $b_m=2r_h$ si ha
+Cut-off: $b_{min}\approx H$, la pressione smorza effetti su scala pi\'u piccola; regime non-lneare, richiesto per gap formation, lunghezza-scala del flusso non minore di $r_H$: predndendo $b_m=2r_h$ si ha
 \begin{equation}
 \frac{M_p}{M_*}>\frac{40\nu}{a^2\omega}
 \end{equation}
