--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -2,17 +2,25 @@
 \chapter{Sistema solare}
 }
 
-
 \begin{workout}[Sistema solare - andamento densit\'a e composizione]
 asteroid mercury mars mass depletion pg 298
+farinella pg513,weidenschilling 77,
 \end{workout}
 
 \begin{workout}[et\'a corpi sistema solare (age and chronology)]
-helioseismology and meteoritic dating
+age of the sun: $4.57Gyr$ (Bahcall95)
+CAI: $4567Gyr$ +3Myr chondrule
 \end{workout}
 
+\begin{workout}[Noble gas enrichment]
+FORMATION OF GIANT PLANETS – AN ATTEMPT IN MATCHING OBSERVATIONAL CONSTRAINTS
+\end{workout}
 
-\begin{workout}[Struttura interna]
+\begin{workout}[core giganti gassosi: modelli planetari e raffronto isolation mass in MMSN]
+
+\end{workout}
+
+\begin{workout}[atmospher composition and photoevaporation]
 pg 256: interior and atmosphere, 293 solar system, 143 properties of transit
 \end{workout}
 
@@ -30,18 +38,6 @@ Baraffe 07: composition gradients, core dissolution: Wilson, Militzer 12, planet
 
 \end{workout}
 
-\begin{workout}[Modello pianeta gassoso: Giove]
-
-\end{workout}
-
-\begin{workout}[Migrazione II: realistica]\end{workout}
-grand tack (produce dinamical shack up) 
-eccesso pianeti gioviani a 1au in simulazioni??
-\begin{workout}[Noble gas enrichment]
-
-\end{workout}
-
-
 \begin{workout}[Orbit of terrestrial planets]
 Constrain for core accretion model ofgiant planets: dynamical shakeup Nagasawa 05 Thommes08c
 \end{workout}
@@ -55,8 +51,6 @@ perryman pg229
 
 \end{workout}
 
-
-
 \begin{workout}[Planet obliquity:]
 Schlichting sari 07: The effect of Semi-Collisional Accretion on Planetary Spins
 Inconsistent with isotropic distro (Tremaine 1991). Randomly directed component of spin angular momentum (Kokubo Ida 07) cause large then observed i,e (Harris Ward 82).
@@ -66,8 +60,6 @@ Uranus: tilt due to collision or migration: Bergstralh 91 or Bou\'e Laskar 10.
 Non of obliquity of terrestrial planet are belived primordial (secular orbit perturbation)+tidal dissipation.
 Effects of inhomogenous infall on obliquity (tremaine 91, bate 10)
 \end{workout}
-
-
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Alcune caratteristiche della popolazione di esopianeti}
@@ -89,7 +81,7 @@ Se l'asse z \'e lungo la linea di vista la posizione della stella \'e $z=r(t)\si
 \end{align}
 dove $K$ \'e la semi-ampiezza.
 
-\begin{workout}[Simulated radialo detection limit]
+\begin{workout}[Simulated radial detection limit]
 Perrymann pg 34 fig 2.25 d
 paragrafo detectability and selection effects pg 14 perryman
 \end{workout}
@@ -106,7 +98,7 @@ La distribuzione di $M_p\sin{i}$ osservata \'e mostrata in figura \ref{fig:RVmpd
 \begin{figure}[!ht]
 \begin{subfigure}[b]{0.47\textwidth}
 \includegraphics[width=0.9\textwidth]{freqvsM}
-\caption{Diagramma $(M_p,a$ dei pianeti extrasolari osservati (The extrasolar planet encyclopedia -2017): evidenziati in rosso i pianeti rivelati tramite RV, celeste tramite transito, rosa tramite imaging e verde tramite microlensing. Da \cite{howard2012planet}.}\label{fig:Mdistro}
+\caption{Da \cite{mayor2011harps}.}\label{fig:Mdistro}
 \end{subfigure}
 ~
 \begin{subfigure}[b]{0.47\textwidth}
@@ -154,7 +146,7 @@ fig 2.30 pg 39 Perrymann
 \begin{workout}[Radial velocity: keplerian observables (Appendice RV)]
 La coordinata z della stella $z=r(t)\sin{i}\sin{(\omega+\nu)}$ e per la velocit\'a radiale
 \begin{align}
-&v_r=\dot{z}=K[\cos{(\omega+\nu)}+e\cos{\omega}]\label{eq:vrsignal}\\
+&v_r=\dot{z}=K[\cos{(\omega+\nu)}+e\cos{\omega}]\\
 &K=\frac{2\pi}{P}\frac{a_*\sin{i}}{(1-e^2)\expy{1/2}}=(\frac{2\pi G}{P})\expy{1/3}\frac{M_p\sin{i}}{(M_p+M_*)\expy{2/3}}\frac{1}{(1-e^2)\expy{1/1}}
 \end{align}
 Le osservabili $e$, $P$, $t_p$, $\omega$, $K=f(a,e,P,i)$ sono fittate per ogni pianeta.
@@ -168,7 +160,7 @@ Per sistemi multipli consideriamo la sovrapposizione lineare di $n_p$ termini \e
 \begin{workout}[Radial velocity: keplerian observables (Appendix RV)]
 La coordinata z della stella $z=r(t)\sin{i}\sin{(\omega+\nu)}$ e per la velocit\'a radiale
 \begin{align}
-&v_r=\dot{z}=K[\cos{(\omega+\nu)}+e\cos{\omega}]\label{eq:vrsignal}\\
+&v_r=\dot{z}=K[\cos{(\omega+\nu)}+e\cos{\omega}]\\
 &K=\frac{2\pi}{P}\frac{a_*\sin{i}}{(1-e^2)\expy{1/2}}=(\frac{2\pi G}{P})\expy{1/3}\frac{M_p\sin{i}}{(M_p+M_*)\expy{2/3}}\frac{1}{(1-e^2)\expy{1/1}}
 \end{align}
 Le osservabili $e$, $P$, $t_p$, $\omega$, $K=f(a,e,P,i)$ sono fittate per ogni pianeta.
@@ -180,12 +172,22 @@ v_r(t)=K[\cos{(\omega+\nu(t)}+e\cos{\omega}]+\gamma+d(t-t_0)
 
 Per sistemi multipli consideriamo la sovrapposizione lineare di $n_p$ termini \eqref{eq:vrsignal}: viene sottratto il segnale Kepleriano dominante fino a che resta solo rumore.
 
-\begin{workout}[Radial velocity: dtectability and selection effects (pg 14)]
-fig 2.6,fig 2.18
-\end{workout}
-
+\begin{workout}[eccentricity distro: occurrence and architecture]
+wright 09: multiplanet system tend to havelower eccentricity,
+Limbach turner 14: $e_m\propto N\expy{-1.2}$.
+planet around metal rich star have higher e (dawson, murray-clay 13)
+smaller planets tend to have lower e (hogg 10 raccomanded modelling e distro on basis of Bayesian analysis)
+\end{workout}	
 
 \section{Popolazione esopianeti rilevati tramite transito}
+
+\begin{workout}[transit distro observed refs]
+Refs:Mthods of detecting exoplanets (radius distro: pg 136)
+the occurrence within 0.25 au of solar-type stars from kepler
+occurrence architecture exoplanetary
+fressin 13: 
+petigure 13: plateau PLANET POPULATION BELOW TWICE EARTH SIZE
+\end{workout}
 
 Le osservabili sono la differenza di luminosit\'a durante il transito, la durata totale e di massima occultazione del transito, e il periodo: da questi \'e possibile ricavare $R_p$, a, i, $R_*$, e facendo uso della relazione massa raggio appropriata per la fase evolutiva della stella $M_*$
 
@@ -203,11 +205,10 @@ V_p*P\propto d^3*\frac{R_*}{a}\propto R_p^6/P\expy{\frac{5}{3}}
 \end{equation}
 \end{workout}
 
-
-\begin{workout}[transit survey Kepler: coughlin 2016]
-PLANETARY CANDIDATES OBSERVED BY KEPLER. VII. THE FIRST FULLY UNIFORM CATALOG BASED ON THE ENTIRE 48 MONTH DATASET (Q1–Q17 DR24
+\begin{workout}[KEPLER MULTI-PLANET SYSTEM]
+THE CALIFORNIA-KEPLER SURVEY. V. PEAS IN A POD: PLANETS IN A KEPLER MULTI-PLANET SYSTEM ARE SIMILAR IN SIZE AND REGULARLY SPACED
+						 III - A gap in radius distribution of small planets
 \end{workout}
-
 
 \begin{workout}[transiti refs: osservabilie probabilit\'a di rilevamento]
 pg103
@@ -222,10 +223,6 @@ Mass-radius relation: chabrier 09
 \end{workout}
 
 
-\begin{workout}[Atmosphere and starting conditions]
-fig 11.12
-\end{workout}
-
 
 \begin{workout}[M-R diagram]
 orbital migration 10.8 Perryman, tidal effect 10.9, 
@@ -237,5 +234,6 @@ pg 144: theoretical model - La posizione di un pianeta nel diagramma M-R fornisc
 fig 6.35
 \end{workout}
 
+\section{Struttura orbitale e risonanze moto medio}
 
-%\section{Struttura interna, composizione/diagramma $(M,R)$}
+
