--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -181,6 +181,10 @@ smaller planets tend to have lower e (hogg 10 raccomanded modelling e distro on 
 
 \section{Popolazione esopianeti rilevati tramite transito}
 
+\begin{figure}[!ht]
+\includegraphics[keepaspectratio,width=\textwidth]{freqvsRpl50d}
+\end{figure}
+
 \begin{workout}[transit distro observed refs]
 Refs:Mthods of detecting exoplanets (radius distro: pg 136)
 the occurrence within 0.25 au of solar-type stars from kepler
@@ -221,8 +225,6 @@ Probability of randomlyoriented planet on circular/eccentric orbit (Borucki Summ
 pg 143, fig 6.33, 6.34, 6.35
 Mass-radius relation: chabrier 09
 \end{workout}
-
-
 
 \begin{workout}[M-R diagram]
 orbital migration 10.8 Perryman, tidal effect 10.9, 
