multi vs single freq

--- a/sources.sty
+++ b/sources.sty
@@ -1,7 +1,7 @@
 \ProvidesPackage{sources}
 \addbibresource{seminario.bib}
 
-\graphicspath{ {figures/},{figures/mordasini18/}, {figures/crida/}, {figures/perryman14/}, {figures/mayor11-RV/},{figures/howard12-T/}, {figures/haisch01-tau/}, {figures/Andrews10-diskdistro/}}
+\graphicspath{ {figures/},{figures/mordasini18/}, {figures/crida/}, {figures/perryman14/}, {figures/mayor11-RV/},{figures/howard12-T/}, {figures/haisch01-tau/}, {figures/Andrews10-diskdistro/}, {figures/wright09/}}
 
 %%% input rawdata
 %\input{rawdata.tex}
