--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -2,6 +2,8 @@
 \chapter{Sistema solare}
 }
 
+% trim={5cm 0 0 0},clip
+
 \begin{workout}[Sistema solare - andamento densit\'a e composizione]
 asteroid mercury mars mass depletion pg 298
 farinella pg513,weidenschilling 77,
@@ -68,7 +70,7 @@ Effects of inhomogenous infall on obliquity (tremaine 91, bate 10)
 La popolazione degli esopianeti osservata riflette quella reale tramite gli effetti di selezione dovuti alla probabilit\'a direvilamento della tecnica particolare. Le osservazioni pi\'u numerose sono basate sull'osservazione della velocit\'a lungo la linea di vista dovuto al moto della stella attorno al baricentro del sistema stella pianeta (RV) o differenza nella luminosit\'a dovuto al transito del pianeta tra stella e osservatore.
 
 \begin{figure}[!ht]
-\includegraphics[width=0.9\textwidth]{obsMa}\label{fig:Maplot}
+\includegraphics[trim={0cm 0 0 0},clip, width=0.9\textwidth]{obsMa}\label{fig:Maplot}
 \caption{Da \cite{mordasini2018}.}
 \end{figure}
 
@@ -97,12 +99,12 @@ La distribuzione di $M_p\sin{i}$ osservata \'e mostrata in figura \ref{fig:RVmpd
 
 \begin{figure}[!ht]
 \begin{subfigure}[b]{0.47\textwidth}
-\includegraphics[width=0.9\textwidth]{freqvsM}
+\includegraphics[trim={0cm 0 0 0},clip, width=0.9\textwidth]{freqvsM}
 \caption{Da \cite{mayor2011harps}.}\label{fig:Mdistro}
 \end{subfigure}
 ~
 \begin{subfigure}[b]{0.47\textwidth}
-\includegraphics[width=0.9\textwidth]{PfreqvsFeH}\label{fig:freqZstar}
+\includegraphics[trim={0cm 0 0 0},clip, width=0.9\textwidth]{PfreqvsFeH}\label{fig:freqZstar}
 \caption{Da \cite{mayor2011harps}}
 \end{subfigure}
 \end{figure}
@@ -110,13 +112,13 @@ La distribuzione di $M_p\sin{i}$ osservata \'e mostrata in figura \ref{fig:RVmpd
 \begin{figure}[!ht]
 \begin{subfigure}[b]{0.47\textwidth}
 \centering
-\includegraphics[width=0.9\textwidth]{freqvsPgiant}
+\includegraphics[trim={0cm 0 0 0},clip, width=0.9\textwidth]{freqvsPgiant}
 \caption{Da \cite{mayor2011harps}}\label{fig:PdistroM30}
 \end{subfigure}
 ~
 \begin{subfigure}[b]{0.47\textwidth}
 \centering
-\includegraphics[width=0.9\textwidth]{freqvsPlowM}\label{fig:Pdistrom30}
+\includegraphics[trim={0cm 0 0 0},clip,width=0.9\textwidth]{freqvsPlowM}\label{fig:Pdistrom30}
 \caption{Da \cite{mayor2011harps}}
 \end{subfigure}
 \end{figure}
@@ -182,7 +184,7 @@ smaller planets tend to have lower e (hogg 10 raccomanded modelling e distro on 
 \section{Popolazione esopianeti rilevati tramite transito}
 
 \begin{figure}[!ht]
-\includegraphics[keepaspectratio,width=\textwidth]{freqvsRpl50d}
+\includegraphics[trim={0cm 0 0 0},clip, keepaspectratio,width=\textwidth]{freqvsRpl50d}
 \end{figure}
 
 \begin{workout}[transit distro observed refs]
@@ -191,6 +193,8 @@ the occurrence within 0.25 au of solar-type stars from kepler
 occurrence architecture exoplanetary
 fressin 13: 
 petigure 13: plateau PLANET POPULATION BELOW TWICE EARTH SIZE
+bathala 13
+exoplanet.eu
 \end{workout}
 
 Le osservabili sono la differenza di luminosit\'a durante il transito, la durata totale e di massima occultazione del transito, e il periodo: da questi \'e possibile ricavare $R_p$, a, i, $R_*$, e facendo uso della relazione massa raggio appropriata per la fase evolutiva della stella $M_*$
@@ -237,5 +241,16 @@ fig 6.35
 \end{workout}
 
 \section{Struttura orbitale e risonanze moto medio}
+
+\begin{workout}[Long term dynamical stability: mmr, fully packing, eccentricity, inclination distro]
+tidal circularization
+resonance capture and migration (pg 41)
+barnes 08: secularly/resonant dominated
+Planets near mmr (Petrovich 12): strength of resonance
+P-P scattering leds to tightly packed planetary systems (Raymond barnes 09)
+Architecture of planetary systems based om kepler data: number of planets and coplanarity (Fang Margot 12): e,i distro.
+Spacing Kepler planets (Wu Pu 15)
+Are planetary systems filled to capacity? (Fang Nargot 13)
+\end{workout}
 
 
