--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -1,6 +1,38 @@
 {\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{Simulazione polazioni planetarie}
+\chapter{Simulazione popolazioni planetarie}
 }
+
+\begin{workout}[Ref PPS]
+Towarddeterminist model of planetary formation iV: effectsof type I migration
+									: accumulation neare iceline
+									: dynamical intaraction and coagulation of multiple rocky embrios (isolation mass, semi-analytic vs n-body)
+									: eccentricity distribution of gas giant
+\end{workout}
+
+\section{Modello disco di accrescimento e distribuzione condizioni iniziali}
+
+\begin{workout}[Modello di disco di accrescimento - (Mordasini18: 4) - Introduzione descrizione fenomeni grazie a PPS]
+Refs: garaud lin 07, chiang goldreich 97
+Un modello di disco  di accrescimento usato nelle simulazioni considera l'evoluzione della densit\'a superficiale tramite l'equazione \eqref{eq:diskaccrphev-m18}
+
+\begin{align}
+&\TDy{t}{\Sigma}=\frac{1}{r}\PDof{r}[3r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]+\dot{\Sigma}_w(r)+\dot{\Sigma}_p(r)\label{eq:diskaccrphev-m18}\\
+&\dot{\Sigma}_w(a)=\left\{\begin{array}{c}0\\\frac{\dot{M}_w}{2\pi(a_{max}-R_g)a}\\\end{array}\right.
+\end{align}
+
+Densit\'a superficiale iniziale:
+\begin{equation}
+\Sigma(a,t=0)=\Sigma_0(\frac{r}{1AU})\expy{p_g}\Exp{[-(\frac{r}{R_o})\expy{2+p_g}]}(1-\sqrt{\frac{r}{R_i}})
+\end{equation}
+4-Mordasini18 (Hayashi81). $p_g\approx1$ (Andrews10).
+\end{workout}
+
+Initial disk mass
+(infall phase end, no more self-gravitational instabilities) - stability(shu90), MMSN hayashi81/weidenshilling77, observations(Andrews10,Manara16) points to $(0.1-10)\%$ stellar mass, distro log-normal with mean $0.01M_*$.
+
+{Disk lifetime}
+$1-10My$ with mean $3My$ (Haisch01, Mamajek09)
+
 
 \section{Distribuzione iniziale planetesimi}
 Assumendo conversione completa di polvere in planetesimi, la densit\'a superficiale di planetesimi \'e
@@ -15,6 +47,12 @@ Dust converted early everywhere fully-efficient (mordasini18: pg 12),Thommes pg8
 &\dot{\Sigma}_p(r)=-\frac{1}{2\pi aB_LR_H}\dot{M}_c
 \end{align*}
 Icelines Mordasini 1141: inside where T exceeds sublimation
+
+{Embryo starting position}
+Usually a distro uniform in log(a): relative spacing of few Hill spheres (Kokubo Ida 10)
+Ida, lin10: asymptotical isolation mass ''Toward a Deterministic Model of Planetary Formation VI'',
+Trapped evolution model: Hasegawa pudritz 11, Cridland 16
+
 \end{workout}
 
 \section{Accrescimento dei protopianeti e gas}
@@ -56,11 +94,17 @@ f_{va04}=1.668(\frac{M_p}{\mjupiter{}})\expy{1/3}\exp{-\frac{M_p}{1.5\mjupiter{}
 \end{equation}
 \end{workout}
 
+\section{Popolazione pianeti gianti}
+
+envelopcore
+
 
 {\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{Funzione di massa sistemi planetari}
+\chapter{Raffronto popolazione osservata vs sintetiche}
 }
 
-{Impact of planet migration model on planetary populations: effects of saturation, cooling and stellar irradiation}
+\begin{workout}[Effects of saturation, cooling and irradiation.]
+Impact of planet migration model on planetary populations: effects of saturation, cooling and stellar irradiation (??)
 Outward migration helps some planets to become massive, accumulation zone at certain semiaxis, at what mass corotation saturate?
-TOdo: mifration model
+Migration of protoplanets in radiative disks
+\end{workout}
